0.7.0
    - DataWriter.assertLiveliness() to support Liveliness kind MANUAL_BY_TOPIC.
    - Expose Instances with DataReader & DataWriter. Also, for DataReader various getXXX methods
      to get Samples from history cache (in addition to using SampleListener).
    - FIX: KeyHash equals & hashCode, which is used as a key in Map that stores Instances
        
0.6.4
    - Some refactoring, general bug fixing and documentation.
    - CacheChange is removed. Sample is used instead. 
    - FIX: time conversion from wire to millis
    - QosDurability default is VOLATILE
    
0.6.3
    - net.sf.jrtps.rtps.SampleListener is moved to udds package. 
      RTPSListener is added to rtps layer. This allows creation of 
      reader side filtering without bloating rtps layer. 
    
0.6.2
    - Configuration: rtps.writer.push-mode=true|false, 
      rtps.reader.heartbeat-suppression-duration, rtps.writer.nack-suppression-duration, 
      jrtps.publish-builtin-data=true|false, jrtps.prefer-multicast=true|false
    
0.6.1
    - Documentation is being generated with maven site plugin
    - jRTPS thread names contains domainId.participantId, which is 
      useful in debugging.
	
0.6.0
    - moved RTPS entities (RTPSParticipant, RTPSReader, ...) to net.sf.jrtps.rtps package.
    - Combined udds & jrtps. Now there is only one artifact: net.sf.jrtps:jrtps.
    - FIX: SequenceNumber long conversion

0.5.6
	- Rearranged udds test to examples. Initial interoperability tests for 
	  OpenSplice and OpenDDS. Not interoperable for now :|
	- FIX: Heartbeat announce period is applied only for reliable writers
	- FIX: Heartbeat response delay is applied before AckNack gets created
	- FIX: SequenceNumberSet reading/writing
	
0.5.5	
	- Artifacts are OSGi bundles

0.5.1
	- Heartbeat period
	- Artifacts are OSGi bundles
	- Renamed ReaderData -> SubscriptionData, WriterData PublicationData
	  to be more in sync with DDS specification.
	- JavaExternalizableMarshaller introduced.