@@ -5,8 +5,6 @@ import java.io.IOException;
 import net.sf.jrtps.builtin.ParticipantData;
 import net.sf.jrtps.builtin.PublicationData;
 import net.sf.jrtps.builtin.SubscriptionData;
-import net.sf.jrtps.udds.DataReader;
-import net.sf.jrtps.udds.DataWriter;
 import net.sf.jrtps.udds.Participant;
 
 public class EListener implements net.sf.jrtps.udds.EntityListener {
@@ -31,42 +29,12 @@ public class EListener implements net.sf.jrtps.udds.EntityListener {
     }
 
     @Override
-    public void livelinessLost(PublicationData remoteWriter) {
-        System.out.println("Liveliness lost: " + remoteWriter);
-    }
-
-    @Override
-    public void livelinessLost(SubscriptionData remoteReader) {
-        System.out.println("Liveliness lost: " + remoteReader);
-    }
-
-    @Override
     public void readerDetected(SubscriptionData rd) {
         System.out.println("Reader detected: " + rd);
     }
 
     @Override
-    public void readerMatched(DataWriter<?> writer, SubscriptionData rd) {
-        System.out.println("Reader matched: " + writer + ", " + rd);
-    }
-
-    @Override
     public void writerDetected(PublicationData wd) {
         System.out.println("Writer detected: " + wd);
-    }
-
-    @Override
-    public void writerMatched(DataReader<?> reader, PublicationData wd) {
-        System.out.println("Writer matched: " + reader + ", " + wd);
-    }
-
-    @Override
-    public void inconsistentQoS(DataWriter<?> writer, SubscriptionData rd) {
-        System.out.println("Inconsistent QoS: " + writer + ", " + rd);
-    }
-
-    @Override
-    public void inconsistentQoS(DataReader<?> reader, PublicationData wd) {
-        System.out.println("Inconsistent QoS: " + reader + ", " + wd);
     }
 }
